Add some more keywords

--- a/netlogostyle.tex
+++ b/netlogostyle.tex
@@ -1,5 +1,5 @@
 \lstdefinelanguage{NetLogo}{
-	morekeywords=[1]{to,to-report,end, extensions,to-report},
+	morekeywords=[1]{to,to-report,end, extensions,to-report,globals,breed,directed-link-breed, link-breed},
 	extendedchars=true, 
     breaklines=true,
     breakatwhitespace=true,
@@ -7,10 +7,10 @@
     columns=fullflexible,
 	tabsize=4,
     keywordstyle=[1]\color[rgb]{0.25,0.5,0.35},%\color[rgb]{0.4,0.8,0.2}\bfseries,
-    morekeywords=[2]{let,set,loop, if, report, foreach, print, tick while, every, ifelse},
+    morekeywords=[2]{let,set,loop, if, report, foreach, print, tick, while, every, ifelse, ask},
     keywordstyle=[2]\color{blue},
     alsoletter={-,?,.},
-    morekeywords=[3]{position, not, reverse, fput, substring, length, word, timer,is-number?,filter},
+    morekeywords=[3]{position, not, reverse, fput, substring, length, word, timer,is-number?,filter,first, bf, butfirst, last, empty?, n-of, color, who, shape},
     keywordstyle=[3]\color[rgb]{0.6,0,0.8},
     comment=[l]{\;},
     commentstyle=\color[rgb]{0.75,0.75,0.75},
